--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.7",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-router-dom": "next"
+    "react-router-dom": "next",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
