--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "backendless": "^5.2.14",
     "bootstrap": "^4.3.1",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.14.7",
