--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "backendless": "^5.2.14",
-    "bootstrap": "^4.3.1",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.14.7",
+    "backendless": "5.2.14",
+    "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.15.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-router-dom": "next",
-    "reactstrap": "^8.0.0"
+    "react-perfect-scrollbar": "^1.5.3",
+    "react-router-dom": "4.4.0-beta.8",
+    "reactstrap": "8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
